# rkb

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/celestia/: Cargo.toml
crates/celestia/src/: client.rs  error.rs  finality.rs  index.rs  lib.rs  retry.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: application.rs  blocker.rs  engine.rs  error.rs  leader.rs  lib.rs  network.rs  reporter.rs  runtime.rs  simplex.rs
crates/execution/: Cargo.toml
crates/execution/src/: client.rs  error.rs  forkchoice.rs  jwt.rs  lib.rs  payload.rs
crates/sequencer/: Cargo.toml
crates/sequencer/src/: cli.rs  config.rs  main.rs  sequencer.rs  simplex_sequencer.rs
crates/types/: Cargo.toml
crates/types/src/: block.rs  config.rs  lib.rs  serde_helpers.rs  transaction.rs
docker/: Dockerfile  README.md  docker-compose.yml  genesis.json
docker/config/validator-0/: config.example.toml  config.toml
docker/config/validator-1/: config.example.toml  config.toml  config.toml.example
docker/config/validator-2/: config.example.toml  config.toml
docker/ethrex/: docker-compose.yml  genesis.json
docker/ethrex/config/validator-0/: config.toml
docker/ethrex/config/validator-1/: config.toml
docker/ethrex/config/validator-2/: config.toml
docker/reth/: docker-compose.yml
docker/reth/config/validator-0/: config.toml
docker/reth/config/validator-1/: config.toml
docker/reth/config/validator-2/: config.toml
docker/scripts/: connect-ethrex-peers.sh  connect-reth-peers.sh  generate-keys.sh
docs/: architecture.md  block-timing-explained.md  onboarding.md  roadmap-zk-verification.md  running-3-validator-network.md
plans/: 00-overview.md  01-consensus.md  02-celestia.md  03-execution.md  04-contracts.md  05-integration.md  06-infrastructure.md  07-scaffolding.md  plan.md
scripts/: init.sh
