[package]
name = "sequencer-celestia"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Celestia DA module using Lumina client"

[dependencies]
sequencer-types.workspace = true

# Celestia (Lumina client for direct gRPC blob submission)
celestia-client.workspace = true
celestia-types.workspace = true
# celestia-rpc kept for header subscription (finality tracking)
celestia-rpc.workspace = true
# tendermint for merkle hash type
tendermint = "0.40"

alloy-primitives.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
tokio-stream.workspace = true
futures.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
bincode.workspace = true
hex.workspace = true

[dev-dependencies]
rstest.workspace = true
tempfile = "3"
# Enable test-utils for Block::test_block() in tests
sequencer-types = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
