[package]
name = "sequencer-execution"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Execution module using reth Engine API"

[dependencies]
sequencer-types.workspace = true

alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true

jsonrpsee.workspace = true
serde.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
hex.workspace = true
sha2.workspace = true

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
