[package]
name = "sequencer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Celestia-native PoA EVM sequencer"

[[bin]]
name = "sequencer"
path = "src/main.rs"

[dependencies]
# Internal crates
sequencer-consensus = { workspace = true }
sequencer-celestia = { workspace = true }
sequencer-execution = { workspace = true }
sequencer-types = { workspace = true }

# Ethereum types
alloy-primitives = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full", "signal"] }
futures = { workspace = true }

# CLI and config
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
eyre = { workspace = true }

# Cryptography
commonware-cryptography = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
